# explain-rag

./: .env.example  .gitignore  Makefile  README.md
app/: .dockerignore  .env.example  .env.production.example  Dockerfile  README.md  fly.toml  pyproject.toml
app/src/: config.py  main.py
app/src/adapters/outbound/: __init__.py  arxiv_client.py  chroma_store.py  cross_encoder_reranker.py  env_user_storage.py  fastembed_embedding.py  fastembed_reranker.py  hdbscan_clusterer.py  langchain_faithfulness.py  langchain_rag.py  postgres_query_storage.py  postgres_vector_store.py  ragas_evaluator.py  sqlite_coordinates_storage.py  sqlite_query_storage.py  st_embedding.py  umap_reducer.py
app/src/application/: coordinates_service.py  ingestion_service.py  query_service.py
app/src/domain/entities/: __init__.py  chunk.py  coordinates.py  explanation.py  paper.py  query.py
app/src/domain/ports/: __init__.py  clustering.py  coordinates_storage.py  dimensionality_reduction.py  embedding.py  evaluation.py  faithfulness.py  llm.py  paper_source.py  (+4 more)
app/supabase/migrations/: 20260225174527_initial_schema.sql
app/tests/: conftest.py  test_auth.py  test_clustering.py  test_coordinates.py  test_coordinates_endpoints.py  test_coordinates_service.py  test_dimensionality_reduction.py  test_e2e.py  test_evaluation.py  test_explanation.py  test_generation.py  test_health.py  test_paper_delete.py  test_paper_search.py  test_postgres_adapters.py  test_query.py  test_query_export.py  test_query_storage.py  test_reranking.py  test_retrieval.py  test_sqlite_coordinates_storage.py  test_stats.py
(+66 files in other folders)
