[project]
name = "explainrag"
version = "0.1.0"
description = "Explainable Retrieval-Augmented Generation for academic papers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-chroma>=0.2.0",
    "chromadb>=0.5.0",
    "anthropic>=0.40.0",
    "fastembed>=0.5.0",
    "arxiv>=2.1.0",
    "pymupdf>=1.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.19.0",
    "pyjwt>=2.11.0",
    "bcrypt>=5.0.0",
    "ragas>=0.2.0",
    "datasets>=2.14.0",
    "umap-learn>=0.5.5",
    "hdbscan>=0.8.33",
    # PostgreSQL / Supabase
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    # Rate limiting
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
]
openai = ["langchain-openai>=0.3.0", "openai>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:builtin type Swig.*:DeprecationWarning",
    "ignore:builtin type swigvarlink.*:DeprecationWarning",
]
